Release history for slinp

v16.06  2016-06-26
  [Fixed]
  - Font size of stopclock is properly set when using Gtk 3.20
    (backwards incompatible).

  [Added]
  - prescontrol supports cursor keys and PageUp/Down.
  - showpdf's window titles are prefixed with a short string that
    indicates the purpose of each window.

v15.09 and earlier releases
  - Sorry, the CHANGES file did not exist back then. Please refer to the
    Git log.